--- a/flavor.html
+++ b/flavor.html
@@ -12,8 +12,16 @@
             <a href="flavor.html">Flavor</a>
             <a href="origin.html">Origin</a>
         <br>
+        <h1>Flavor</h1>
+        <h3></h3>
+            <p></p>
         <br>
+        <h3></h3>
+            <p></p>
         <br>
-            <a href=https://www.cigaraficionado.com/article/cigar-shapes-sizes-and-colors-8094>Cigar Aficionado</a> 
+        <h3></h3>
+            <p></p>
+        <br>
+        <a href=https://www.cigarplace.biz/blog/cigar-101-about-cigar-colors.html>Cigar Place</a> 
     </body>
 </html>
