Color Tab Update

--- a/color.html
+++ b/color.html
@@ -15,13 +15,25 @@
         <h1>Color</h1>
         <h3>Candela</h3>
             <p>Cigars rolled with candela wrappers are hard to miss due to the unmistakable green color of the leaf. The leaves are harvested before the tobacco has fully matured. They are then quickly dried to lock in the plant's natural chlorophyll content which later gives the wrapper its green hue. Candela cigars are a crowd favorite owing to their grassy flavors of cedar and green tea with a hint of pepper.</p>
-        <br>
+            <br>
         <h3>Claro</h3>
             <p>Did you know Claro tobacco is grown under cheesecloth tents? Yes, that's right. Apart from cultivating the leaves early, keeping them in shade is done to minimize exposure to the sun and protect the leaves from varying weather conditions. Once they are air-dried, they get a distinctive golden or tan color. However, these wrappers add little to the flavor of the cigar and put the focus on the flavor of filler tobaccos instead.</p>
-        <br>
+            <br>
         <h3>Colorado Claro</h3>
             <p>Colorado Claro wrappers are light reddish-brown as they are made from leaves grown in direct sunlight that are not picked until quite mature. They contribute a fruity and sweet element to cigars. Their rich aromatic scents make it a favorite of many cigar aficionados. They are often known as English Market Selection. However, this implies a specific inventory that was approved by historical importers, Hunters & Frankau.</p>
-        <br>
+            <br>
+        <h3>Colorado</h3>
+            <p>Colorado wrappers are brownish red and find a place right in the middle of the cigar wrapper color scale. They are often shade-grown and left to mature for longer to develop a robust profile. Cigar enthusiasts enjoy Colorado wrappers for their full-bodied flavor that contributes to much softer aromas as compared to their darker counterparts. This allows the filler tobacco to stand out.</p>
+            <br>
+        <h3>Colorado Maduro</h3>
+            <p>A Colorado Maduro wrapper showcases a dark brown shade that falls in a lighter spectrum. They are counted among the most classic wrappers contributing to full-bodied smoke. Also known as Spanish Market Selection, these are something of a compromise between Maduro and Colorado. Being darker than Colorado and lighter than Maduro, they have a more aromatic flavor profile.</p>
+            <br>
+        <h3>Maduro</h3>
+            <p>Maduro, translated from Spanish, means 'mature'. True to their name, these wrappers are cultivated from some of the highest leaves of the plant that are exposed to the sun for long durations. Typically, it can take many years for the curing and fermentation process of Maduro wrappers. The aging process performed in the hot conditions of a pressure chamber makes the Maduro leaves coarse and thick. These leaves are also high in nicotine content and exhibit a distinctly sweet flavor.</p>
+            <br>
+        <h3>Oscuro</h3>
+            <p>Like Maduro, Oscuro is made from the highest leaves of the tobacco plant that are exposed to the sun. The difference is that they are left on the plant for as long as possible before they must be cut. Once cultivated, they undergo a much more strenuous and longer fermentation process compared to Maduro. This results in an almost black wrapper with a very pronounced flavor and rough texture.</p>
+            <br>
         <a href=https://www.cigarplace.biz/blog/cigar-101-about-cigar-colors.html>Cigar Place</a> 
     </body>
 </html>
