--- a/shape.html
+++ b/shape.html
@@ -15,13 +15,34 @@
         <h1>Shape</h1>
         <h3>Corona</h3>
             <p>This classic cigar size measures around 5.5 inches in length with a ring gauge of 42 to 44. It's a great choice for beginners as it has a balanced flavor and moderate strength. The history of the corona cigar size dates back to the 19th century, when cigars first became popular in Europe and North America. The corona size is believed to have originated in Cuba, where it quickly became a popular choice among cigar smokers. <i>Cohiba Black Corona</i> is a premium cigar out of Dominican Republic with rich and spicy medium-to-full bodied blend <b>($19 MSRP)</b>.</p>
-        <br>
+            <br>
         <h3>Robusto</h3>
             <p>The robusto is a favorite among many cigar enthusiasts due to its compact size and full flavor. Measuring around 4.5 to 5.5 inches in length with a ring gauge of 50, it's a great choice for an everyday smoke. This size was creation that dates back to Cuba's 40s where it was initially developed as a shorter yet thicker version of Corona size and until this day remains most popular choice for any cigar smoker. <i>Stolen Throne Crook of the Crown Robusto</i> is an exquisite blend with big notes of espresso, caramel, leather and cocoa <b>($10 MSRP)</b>.</p>
-        <br>
+            <br>
         <h3>Lancero</h3>
             <p>Theseis slim cigars vitola measures around 7.5 inches in length with a ring gauge of 38 to 40. Lanceros are known for their complex and concentrated flavor profiles, often featuring notes of wood, coffee, leather, and spice. Due to the small ring gauge, the flavor of the tobacco is amplified, providing a unique smoking experience that is favored by many connoisseurs.The lancero vitola can be challenging to roll, which is why it is typically only made by experienced cigar rollers. The thinness of the cigar wrapper can make it difficult to achieve a consistent draw, so the construction of the lancero requires a high level of skill. This is also, my all time favorite vitola with so many blends to choose from. <i>Villa Casdagli Lancero</i> is sitting at a top of my list with very complex notes of coffee, caramel, spice and vanilla. If you can find it, grab a box. <b>($17 MSRP)</b>.</p>
-        <br>
+            <br>
+        <h3>Culebras</h3>
+            <p>This unique vitola consists of three thin cigars twisted together to form a braided look. The individual cigars are around 5 inches in length with a ring gauge of 38 to 40. Smoking a culebra provides a complex flavor experience, as the three cigars each have their own distinct taste. <i>Caldwell Antionette Culebra</i> is a definite conversation starter <b>($30 MSRP)</b>.</p>
+            <br>
+        <h3>Belicoso</h3>
+            <p>This cigar is similar in size to the robusto, but with a tapered, pointed head. Measuring around 5 inches in length with a ring gauge of 50, the belicoso has a rich, full flavor. For a number of years this was my go-to cigar size and I still love it. <i>Casa 1910 Cavalry Edition Lucero</i> is a medium body cigar that I find best enjoyed with any light body single malt whisky <b>($16 MSRP)</b>.</p>
+            <br>
+        <h3>Pyramid (Bellicosoe)</h3>
+            <p>Also known as a torpedo, this vitola has a pointed head and a wider foot. P Measuring around 6 inches in length with a ring gauge of 52, the pyramid provides an unique smoking experience as the flavors change as you smoke from the pointed head to the wider foot. Another Robert Caldwell cigar called <i>Caldwell Midnight Express Pyramide</i> that uses Arapiraca Maduro wrapper giving it that distinctive creamy flavor is amongst my favorites. <b>($15 MSRP)</b>.</p>
+            <br>
+        <h3>Chisel</h3>
+            <p>The chisel vitola has a flat head that tapers to a point, making it easier to cut and light. Measuring around 5 inches in length with a ring gauge of 50, the chisel offers a concentrated flavor. The chisel cigar was originally created by pressing a traditional round cigar into a chisel shape, using a special tool designed by Litto Gomez (La Flor Dominicana) himself. Thus resulting in a cigar that had a unique shape allowing smoker to vary the draw and flavor of the smoke by changing the angle of the cut. <i>La Flor Dominicana Air Bender Chisel</i> with bold and meaty flavors is not to be missed <b>($10 MSRP)</b>.</p>
+            <br>
+        <h3>Perfecto</h3>
+            <p>This vitola has a tapered head and foot, with a bulge in the middle.P. Measuring around 4 to 6 inches in length with a ring gauge of 50 to 52, the perfecto provides a unique flavor experience as the flavors change as you smoke from the tapered head to the wider middle and then back to the tapered foot. <i>Davidoff Colorado Claro Short Perfecto</i> is a masterpiece blend designed to be perfect at every draw <b>($19 MSRP)</b>.</p>
+            <br>
+        <h3>Flying Pig</h3>
+            <p>This whimsical vitola has a pigtail cap and a short, fat body with a curly tail. TMeasuring around 4 inches in length with a ring gauge of 60, the flying pig provides a fun and flavorful smoking experience. <i>Drew Estate Liga Privada No. 9 Flying Pig</i> is ana unique smoking experience with rare tobaccos and wrapper fermented for over 18 months <b>($17 MSRP)</b>.</p>
+            <br>
+        <h3>Salomon</h3>
+            <p>This impressive vitola has a tapered head and foot, with a wide bulge in the middle. Measuring around 7 inches in length with a ring gauge of 58, first introduced by Davidoff as its limited edition cigar line. Its' shape allows for a slow burn and rich and complex flavors. <i>Cavalier Genève White Series Salomon</i> has a mild yet complex profile with cream, stone fruit and flawless construction <b>($13 MSRP)</b>.</p>
+            <br>
         <a href=https://otlgolf.com/recapping-cigar-sizes-and-shapes>Recapping Cigars</a> 
     </body>
 </html>
