--- a/links.html
+++ b/links.html
@@ -5,14 +5,15 @@
         <title>Project-1</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    
+
     <body>
+
         <div class="fixed-box">
             <div class="upper-fixed-box">
                 <a href="index.html" class="hidden-link2">Home</a>
             </div>
             <div class="upper-fixed-box">
-                <a href="library.html" class="hidden-link2">Review Library</a>
+                <a href="library.html" class="hidden-link2">Library</a>
             </div>
             <div class="upper-fixed-box">
                 <a href="wishlist.html" class="hidden-link2">Wishlist</a>
@@ -27,6 +28,6 @@
                 <a href="links.html" class="hidden-link2">Links</a>
             </div>
         </div>
+        
     </body>
-
 </html>
