--- a/wishlist.html
+++ b/wishlist.html
@@ -34,27 +34,28 @@
             </div>
 
             <ol>
-                <h3><li>Notre-Dame de Paris</li></h3>
-                <h3><li>Neuschwanstein Castle</li></h3>
-                <h3><li>Paris - City of Love</li></h3>
-                <h3><li>The Milky Way Galaxy</li></h3>
-                <h3><li>Bird of Paradise</li></h3>
-                <h3><li>Wildflower Bouquet</li></h3>
-                <h3><li>Dried Flower Centerpiece</li></h3>
-                <h3><li>Mixed Flowerpot</li></h3>
-                <h3><li>Petite Sunny Bouquet</li></h3>
-                <h3><li>Japanese Red Maple Bonsai Tree</li></h3>
-                <h3><li>Mini Bonsai Trees</li></h3>
-                <h3><li>Tulip Bouquet</li></h3>
-                <h3><li>Peace Lily</li></h3>
-                <h3><li>Daisies</li></h3>
-                <h3><li>The Endurance</li></h3>
-                <h3><li>Leonardo da Vinci's Flying Machine</li></h3>
-                <h3><li>Tropical Aquarium</li></h3>
-                <h3><li>Twilight the Cullen House</li></h3>
-                <h3><li>River Steamboat</li></h3>
-                <h3><li>Mineral Collection</li></h3>
+                <h3><li id="list-settings">Notre-Dame de Paris</li></h3>
+                <h3><li id="list-settings">Neuschwanstein Castle</li></h3>
+                <h3><li id="list-settings">Paris - City of Love</li></h3>
+                <h3><li id="list-settings">The Milky Way Galaxy</li></h3>
+                <h3><li id="list-settings">Bird of Paradise</li></h3>
+                <h3><li id="list-settings">Wildflower Bouquet</li></h3>
+                <h3><li id="list-settings">Dried Flower Centerpiece</li></h3>
+                <h3><li id="list-settings">Mixed Flowerpot</li></h3>
+                <h3><li id="list-settings">Petite Sunny Bouquet</li></h3>
+                <h3><li id="list-settings">Japanese Red Maple Bonsai Tree</li></h3>
+                <h3><li id="list-settings">Mini Bonsai Trees</li></h3>
+                <h3><li id="list-settings">Tulip Bouquet</li></h3>
+                <h3><li id="list-settings">Peace Lily</li></h3>
+                <h3><li id="list-settings">Daisies</li></h3>
+                <h3><li id="list-settings">The Endurance</li></h3>
+                <h3><li id="list-settings">Leonardo da Vinci's Flying Machine</li></h3>
+                <h3><li id="list-settings">Tropical Aquarium</li></h3>
+                <h3><li id="list-settings">Twilight the Cullen House</li></h3>
+                <h3><li id="list-settings">River Steamboat</li></h3>
+                <h3><li id="list-settings">Mineral Collection</li></h3>
             </ol>
+
         </div>
     </body>
     
