--- a/library.html
+++ b/library.html
@@ -34,73 +34,73 @@
             </div>
 
             <ol>
-                <h3><li><a href="titanic.html" class="hidden-link">Titanic</a></li></h3>
-                <h3><li><a href="colosseum.html" class="hidden-link">Colosseum</a></li></h3>
-                <h3><li><a href="concorde.html" class="hidden-link">Concorde</a></li></h3>
-                <h3><li>Statue of Liberty</li></h3>
-                <h3><li>Taj Mahal</li></h3>
-                <h3><li>The White House</li></h3>
-                <h3><li>Great Pyramid of Giza</li></h3>
-                <h3><li>Empire State Building</li></h3>
-                <h3><li>Trevi Fountain</li></h3>
-                <h3><li>Singapore</li></h3>
-                <h3><li>Las Vegas</li></h3>
-                <h3><li>New York City</li></h3>
-                <h3><li>San Francisco</li></h3>
-                <h3><li>Tokyo</li></h3>
-                <h3><li>London</li></h3>
-                <h3><li>Vespa</li></h3>
-                <h3><li>Yellow Taxi</li></h3>
-                <h3><li>Ponte Vecchio</li></h3>
-                <h3><li>Tranquil Garden</li></h3>
-                <h3><li>Daffodils</li></h3>
-                <h3><li>Lotus Flowers</li></h3>
-                <h3><li>Sunflowers</li></h3>
-                <h3><li>Cherry Blossoms</li></h3>
-                <h3><li>Roses</li></h3>
-                <h3><li>Bouquet of Roses</li></h3>
-                <h3><li>Flower Bouquet</li></h3>
-                <h3><li>Pretty Pink Flower Bouquet</li></h3>
-                <h3><li>Flower Arrangement</li></h3>
-                <h3><li>Orchid</li></h3>
-                <h3><li>Mini Orchid</li></h3>
-                <h3><li>Plum Blossom</li></h3>
-                <h3><li>Lucky Bamboo</li></h3>
-                <h3><li>Chrysanthemum</li></h3>
-                <h3><li>Succulents</li></h3>
-                <h3><li>Tiny Plants</li></h3>
-                <h3><li>Bonsai Tree</li></h3>
-                <h3><li>Poinsettia</li></h3>
-                <h3><li>Wreath</li></h3>
-                <h3><li>Christmas Tree</li></h3>
-                <h3><li>Family Christmas Tree Decoration</li></h3>
-                <h3><li>Northern Lights Diorama</li></h3>
-                <h3><li>Nutcracker</li></h3>
-                <h3><li>Christmas Decor Set</li></h3>
-                <h3><li>Santa's Workshop</li></h3>
-                <h3><li>Winter Holiday Train</li></h3>
-                <h3><li>Moving Truck</li></h3>
-                <h3><li>Decorative Easter Egg</li></h3>
-                <h3><li>Easter Bunny and Chick Egg Hunt</li></h3>
-                <h3><li>Cute Bunny</li></h3>
-                <h3><li>Exotic Peacock</li></h3>
-                <h3><li>Sea Animals</li></h3>
-                <h3><li>The Insect Collection</li></h3>
-                <h3><li>Auspicious Dragon</li></h3>
-                <h3><li>Year of the Dragon</li></h3>
-                <h3><li>Tales of the Space Age</li></h3>
-                <h3><li>Vincent Van Gogh - The Starry Night</li></h3>
-                <h3><li>Vincent Van Gogh - Sunflowers</li></h3>
-                <h3><li>Hokusai - The Great Wave</li></h3>
-                <h3><li>Mona Lisa</li></h3>
-                <h3><li>Andy Warhol's Marilyn Monroe</li></h3>
-                <h3><li>LOVE</li></h3>
-                <h3><li>Retro Record Player</li></h3>
-                <h3><li>Monkey D. Luffy Figure</li></h3>
-                <h3><li>Buggy the Clown Figure</li></h3>
-                <h3><li>The Going Merry Pirate Ship</li></h3>
-                <h3><li></li></h3>
-                <h3><li></li></h3>
+                <h3><li id="list-settings"><a href="titanic.html" class="hidden-link">Titanic</a></li></h3>
+                <h3><li id="list-settings"><a href="colosseum.html" class="hidden-link">Colosseum</a></li></h3>
+                <h3><li id="list-settings"><a href="concorde.html" class="hidden-link">Concorde</a></li></h3>
+                <h3><li id="list-settings">Statue of Liberty</li></h3>
+                <h3><li id="list-settings">Taj Mahal</li></h3>
+                <h3><li id="list-settings">The White House</li></h3>
+                <h3><li id="list-settings">Great Pyramid of Giza</li></h3>
+                <h3><li id="list-settings">Empire State Building</li></h3>
+                <h3><li id="list-settings">Trevi Fountain</li></h3>
+                <h3><li id="list-settings">Singapore</li></h3>
+                <h3><li id="list-settings">Las Vegas</li></h3>
+                <h3><li id="list-settings">New York City</li></h3>
+                <h3><li id="list-settings">San Francisco</li></h3>
+                <h3><li id="list-settings">Tokyo</li></h3>
+                <h3><li id="list-settings">London</li></h3>
+                <h3><li id="list-settings">Vespa</li></h3>
+                <h3><li id="list-settings">Yellow Taxi</li></h3>
+                <h3><li id="list-settings">Ponte Vecchio</li></h3>
+                <h3><li id="list-settings">Tranquil Garden</li></h3>
+                <h3><li id="list-settings">Daffodils</li></h3>
+                <h3><li id="list-settings">Lotus Flowers</li></h3>
+                <h3><li id="list-settings">Sunflowers</li></h3>
+                <h3><li id="list-settings">Cherry Blossoms</li></h3>
+                <h3><li id="list-settings">Roses</li></h3>
+                <h3><li id="list-settings">Bouquet of Roses</li></h3>
+                <h3><li id="list-settings">Flower Bouquet</li></h3>
+                <h3><li id="list-settings">Pretty Pink Flower Bouquet</li></h3>
+                <h3><li id="list-settings">Flower Arrangement</li></h3>
+                <h3><li id="list-settings">Orchid</li></h3>
+                <h3><li id="list-settings">Mini Orchid</li></h3>
+                <h3><li id="list-settings">Plum Blossom</li></h3>
+                <h3><li id="list-settings">Lucky Bamboo</li></h3>
+                <h3><li id="list-settings">Chrysanthemum</li></h3>
+                <h3><li id="list-settings">Succulents</li></h3>
+                <h3><li id="list-settings">Tiny Plants</li></h3>
+                <h3><li id="list-settings">Bonsai Tree</li></h3>
+                <h3><li id="list-settings">Poinsettia</li></h3>
+                <h3><li id="list-settings">Wreath</li></h3>
+                <h3><li id="list-settings">Christmas Tree</li></h3>
+                <h3><li id="list-settings">Family Christmas Tree Decoration</li></h3>
+                <h3><li id="list-settings">Northern Lights Diorama</li></h3>
+                <h3><li id="list-settings">Nutcracker</li></h3>
+                <h3><li id="list-settings">Christmas Decor Set</li></h3>
+                <h3><li id="list-settings">Santa's Workshop</li></h3>
+                <h3><li id="list-settings">Winter Holiday Train</li></h3>
+                <h3><li id="list-settings">Moving Truck</li></h3>
+                <h3><li id="list-settings">Decorative Easter Egg</li></h3>
+                <h3><li id="list-settings">Easter Bunny and Chick Egg Hunt</li></h3>
+                <h3><li id="list-settings">Cute Bunny</li></h3>
+                <h3><li id="list-settings">Exotic Peacock</li></h3>
+                <h3><li id="list-settings">Sea Animals</li></h3>
+                <h3><li id="list-settings">The Insect Collection</li></h3>
+                <h3><li id="list-settings">Auspicious Dragon</li></h3>
+                <h3><li id="list-settings">Year of the Dragon</li></h3>
+                <h3><li id="list-settings">Tales of the Space Age</li></h3>
+                <h3><li id="list-settings">Vincent Van Gogh - The Starry Night</li></h3>
+                <h3><li id="list-settings">Vincent Van Gogh - Sunflowers</li></h3>
+                <h3><li id="list-settings">Hokusai - The Great Wave</li></h3>
+                <h3><li id="list-settings">Mona Lisa</li></h3>
+                <h3><li id="list-settings">Andy Warhol's Marilyn Monroe</li></h3>
+                <h3><li id="list-settings">LOVE</li></h3>
+                <h3><li id="list-settings">Retro Record Player</li></h3>
+                <h3><li id="list-settings">Monkey D. Luffy Figure</li></h3>
+                <h3><li id="list-settings">Buggy the Clown Figure</li></h3>
+                <h3><li id="list-settings">The Going Merry Pirate Ship</li></h3>
+                <h3><li id="list-settings"></li></h3>
+                <h3><li id="list-settings"></li></h3>
             </ol>
         </div>
     </body>
