--- a/library.html
+++ b/library.html
@@ -34,71 +34,72 @@
             </div>
 
             <ol>
-                <h3><li id="list-settings"><a href="titanic.html" class="hidden-link">Titanic</a></li></h3>
-                <h3><li id="list-settings"><a href="colosseum.html" class="hidden-link">Colosseum</a></li></h3>
-                <h3><li id="list-settings"><a href="concorde.html" class="hidden-link">Concorde</a></li></h3>
-                <h3><li id="list-settings">Statue of Liberty</li></h3>
-                <h3><li id="list-settings">Taj Mahal</li></h3>
-                <h3><li id="list-settings">The White House</li></h3>
-                <h3><li id="list-settings">Great Pyramid of Giza</li></h3>
-                <h3><li id="list-settings">Empire State Building</li></h3>
-                <h3><li id="list-settings">Trevi Fountain</li></h3>
-                <h3><li id="list-settings">Singapore</li></h3>
-                <h3><li id="list-settings">Las Vegas</li></h3>
-                <h3><li id="list-settings">New York City</li></h3>
-                <h3><li id="list-settings">San Francisco</li></h3>
-                <h3><li id="list-settings">Tokyo</li></h3>
-                <h3><li id="list-settings">London</li></h3>
-                <h3><li id="list-settings">Vespa</li></h3>
-                <h3><li id="list-settings">Yellow Taxi</li></h3>
-                <h3><li id="list-settings">Ponte Vecchio</li></h3>
-                <h3><li id="list-settings">Tranquil Garden</li></h3>
-                <h3><li id="list-settings">Daffodils</li></h3>
-                <h3><li id="list-settings">Lotus Flowers</li></h3>
-                <h3><li id="list-settings">Sunflowers</li></h3>
-                <h3><li id="list-settings">Cherry Blossoms</li></h3>
-                <h3><li id="list-settings">Roses</li></h3>
-                <h3><li id="list-settings">Bouquet of Roses</li></h3>
-                <h3><li id="list-settings">Flower Bouquet</li></h3>
-                <h3><li id="list-settings">Pretty Pink Flower Bouquet</li></h3>
-                <h3><li id="list-settings">Flower Arrangement</li></h3>
-                <h3><li id="list-settings">Orchid</li></h3>
-                <h3><li id="list-settings">Mini Orchid</li></h3>
-                <h3><li id="list-settings">Plum Blossom</li></h3>
-                <h3><li id="list-settings">Lucky Bamboo</li></h3>
-                <h3><li id="list-settings">Chrysanthemum</li></h3>
-                <h3><li id="list-settings">Succulents</li></h3>
-                <h3><li id="list-settings">Tiny Plants</li></h3>
-                <h3><li id="list-settings">Bonsai Tree</li></h3>
-                <h3><li id="list-settings">Poinsettia</li></h3>
-                <h3><li id="list-settings">Wreath</li></h3>
-                <h3><li id="list-settings">Christmas Tree</li></h3>
-                <h3><li id="list-settings">Family Christmas Tree Decoration</li></h3>
-                <h3><li id="list-settings">Northern Lights Diorama</li></h3>
-                <h3><li id="list-settings">Nutcracker</li></h3>
-                <h3><li id="list-settings">Christmas Decor Set</li></h3>
-                <h3><li id="list-settings">Santa's Workshop</li></h3>
-                <h3><li id="list-settings">Winter Holiday Train</li></h3>
-                <h3><li id="list-settings">Moving Truck</li></h3>
-                <h3><li id="list-settings">Decorative Easter Egg</li></h3>
-                <h3><li id="list-settings">Easter Bunny and Chick Egg Hunt</li></h3>
-                <h3><li id="list-settings">Cute Bunny</li></h3>
-                <h3><li id="list-settings">Exotic Peacock</li></h3>
-                <h3><li id="list-settings">Sea Animals</li></h3>
-                <h3><li id="list-settings">The Insect Collection</li></h3>
-                <h3><li id="list-settings">Auspicious Dragon</li></h3>
-                <h3><li id="list-settings">Year of the Dragon</li></h3>
-                <h3><li id="list-settings">Tales of the Space Age</li></h3>
-                <h3><li id="list-settings">Vincent Van Gogh - The Starry Night</li></h3>
-                <h3><li id="list-settings">Vincent Van Gogh - Sunflowers</li></h3>
-                <h3><li id="list-settings">Hokusai - The Great Wave</li></h3>
-                <h3><li id="list-settings">Mona Lisa</li></h3>
-                <h3><li id="list-settings">Andy Warhol's Marilyn Monroe</li></h3>
-                <h3><li id="list-settings">LOVE</li></h3>
-                <h3><li id="list-settings">Retro Record Player</li></h3>
-                <h3><li id="list-settings">Monkey D. Luffy Figure</li></h3>
-                <h3><li id="list-settings">Buggy the Clown Figure</li></h3>
-                <h3><li id="list-settings">The Going Merry Pirate Ship</li></h3>
+                <h3><li id="list-settings"><a href="library/titanic.html" class="hidden-link">Titanic</a></li></h3>
+                <h3><li id="list-settings"><a href="library/colosseum.html" class="hidden-link">Colosseum</a></li></h3>
+                <h3><li id="list-settings"><a href="library/concorde.html" class="hidden-link">Concorde</a></li></h3>
+                <h3><li id="list-settings"><a href="library/statue-of-liberty.html" class="hidden-link">Statue of Liberty</a></li></h3>
+                <h3><li id="list-settings"><a href="library/taj-mahal.html" class="hidden-link">Taj Mahal</a></li></h3>
+                <h3><li id="list-settings"><a href="library/the-white-house.html" class="hidden-link">The White House</a></li></h3>
+                <h3><li id="list-settings"><a href="library/great-pyramid-of-giza.html" class="hidden-link">Great Pyramid of Giza</a></li></h3>
+                <h3><li id="list-settings"><a href="library/empire-state-building.html" class="hidden-link">Empire State Building</a></li></h3>
+                <h3><li id="list-settings"><a href="library/trevi-fountain.html" class="hidden-link">Trevi Fountain</a></li></h3>
+                <h3><li id="list-settings"><a href="library/singapore.html" class="hidden-link">Singapore</a></li></h3>
+                <h3><li id="list-settings"><a href="library/las-vegas.html" class="hidden-link">Las Vegas</a></li></h3>
+                <h3><li id="list-settings"><a href="library/new-york-city.html" class="hidden-link">New York City</a></li></h3>
+                <h3><li id="list-settings"><a href="library/san-francisco.html" class="hidden-link">San Francisco</a></li></h3>
+                <h3><li id="list-settings"><a href="library/tokyo.html" class="hidden-link">Tokyo</a></li></h3>
+                <h3><li id="list-settings"><a href="library/london.html" class="hidden-link">London</a></li></h3>
+                <h3><li id="list-settings"><a href="library/vespa.html" class="hidden-link">Vespa</a></li></h3>
+                <h3><li id="list-settings"><a href="library/yellow-taxi.html" class="hidden-link">Yellow Taxi</a></li></h3>
+                <h3><li id="list-settings"><a href="library/ponte-vecchio.html" class="hidden-link">Ponte Vecchio</a></li></h3>
+                <h3><li id="list-settings"><a href="library/tranquil-garden.html" class="hidden-link">Tranquil Garden</a></li></h3>
+                <h3><li id="list-settings"><a href="library/daffodils.html" class="hidden-link">Daffodils</a></li></h3>
+                <h3><li id="list-settings"><a href="library/lotus-flowers.html" class="hidden-link">Lotus Flowers</a></li></h3>
+                <h3><li id="list-settings"><a href="library/sunflowers.html" class="hidden-link">Sunflowers</a></li></h3>
+                <h3><li id="list-settings"><a href="library/cherry-blossoms.html" class="hidden-link">Cherry Blossoms</a></li></h3>
+                <h3><li id="list-settings"><a href="library/roses.html" class="hidden-link">Roses</a></li></h3>
+                <h3><li id="list-settings"><a href="library/bouquet-of-roses.html" class="hidden-link">Bouquet of Roses</a></li></h3>
+                <h3><li id="list-settings"><a href="library/flower-bouquet.html" class="hidden-link">Flower Bouquet</a></li></h3>
+                <h3><li id="list-settings"><a href="library/pretty-pink-flower-bouquet.html" class="hidden-link">Pretty Pink Flower Bouquet</a></li></h3>
+                <h3><li id="list-settings"><a href="library/flower-arrangement.html" class="hidden-link">Flower Arrangement</a></li></h3>
+                <h3><li id="list-settings"><a href="library/orchid.html" class="hidden-link">Orchid</a></li></h3>
+                <h3><li id="list-settings"><a href="library/mini-orchid.html" class="hidden-link">Mini Orchid</a></li></h3>
+                <h3><li id="list-settings"><a href="library/plum-blossom.html" class="hidden-link">Plum Blossom</a></li></h3>
+                <h3><li id="list-settings"><a href="library/lucky-bamboo.html" class="hidden-link">Lucky Bamboo</a></li></h3>
+                <h3><li id="list-settings"><a href="library/chrysanthemum.html" class="hidden-link">Chrysanthemum</a></li></h3>
+                <h3><li id="list-settings"><a href="library/succulents.html" class="hidden-link">Succulents</a></li></h3>
+                <h3><li id="list-settings"><a href="library/tiny-plants.html" class="hidden-link">Tiny Plants</a></li></h3>
+                <h3><li id="list-settings"><a href="library/bonsai-tree.html" class="hidden-link">Bonsai Tree</a></li></h3>
+                <h3><li id="list-settings"><a href="library/poinsettia.html" class="hidden-link">Poinsettia</a></li></h3>
+                <h3><li id="list-settings"><a href="library/wreath.html" class="hidden-link">Wreath</a></li></h3>
+                <h3><li id="list-settings"><a href="library/christmas-tree.html" class="hidden-link">Christmas Tree</a></li></h3>
+                <h3><li id="list-settings"><a href="library/family-christmas-tree-decoration.html" class="hidden-link">Family Christmas Tree Decoration</a></li></h3>
+                <h3><li id="list-settings"><a href="library/northern-lights-diorama.html" class="hidden-link">Northern Lights Diorama</a></li></h3>
+                <h3><li id="list-settings"><a href="library/nutcracker.html" class="hidden-link">Nutcracker</a></li></h3>
+                <h3><li id="list-settings"><a href="library/christmas-decor-set.html" class="hidden-link">Christmas Decor Set</a></li></h3>
+                <h3><li id="list-settings"><a href="library/santa's-workshop.html" class="hidden-link">Santa's Workshop</a></li></h3>
+                <h3><li id="list-settings"><a href="library/winter-holiday-train.html" class="hidden-link">Winter Holiday Train</a></li></h3>
+                <h3><li id="list-settings"><a href="library/moving-truck.html" class="hidden-link">Moving Truck</a></li></h3>
+                <h3><li id="list-settings"><a href="library/decorative-easter-egg.html" class="hidden-link">Decorative Easter Egg</a></li></h3>
+                <h3><li id="list-settings"><a href="library/easter-bunny-and-chick-egg-hunt.html" class="hidden-link">Easter Bunny and Chick Egg Hunt</a></li></h3>
+                <h3><li id="list-settings"><a href="library/cute-bunny.html" class="hidden-link">Cute Bunny</a></li></h3>
+                <h3><li id="list-settings"><a href="library/exotic-peacock.html" class="hidden-link">Exotic Peacock</a></li></h3>
+                <h3><li id="list-settings"><a href="library/sea-animals.html" class="hidden-link">Sea Animals</a></li></h3>
+                <h3><li id="list-settings"><a href="library/the-insect-collection.html" class="hidden-link">The Insect Collection</a></li></h3>
+                <h3><li id="list-settings"><a href="library/auspicious-dragon.html" class="hidden-link">Auspicious Dragon</a></li></h3>
+                <h3><li id="list-settings"><a href="library/year-of-the-dragon.html" class="hidden-link">Year of the Dragon</a></li></h3>
+                <h3><li id="list-settings"><a href="library/tales-of-the-space-age.html" class="hidden-link">Tales of the Space Age</a></li></h3>
+                <h3><li id="list-settings"><a href="library/vincent-van-gogh-the-starry-night.html" class="hidden-link">Vincent Van Gogh - The Starry Night</a></li></h3>
+                <h3><li id="list-settings"><a href="library/vincent-van-gogh-sunflowers.html" class="hidden-link">Vincent Van Gogh - Sunflowers</a></li></h3>
+                <h3><li id="list-settings"><a href="library/hokusai-the-great-wave.html" class="hidden-link">Hokusai - The Great Wave</a></li></h3>
+                <h3><li id="list-settings"><a href="library/mona-lisa.html" class="hidden-link">Mona Lisa</a></li></h3>
+                <h3><li id="list-settings"><a href="library/andy-warhol's-marilyn-monroe.html" class="hidden-link">Andy Warhol's Marilyn Monroe</a></li></h3>
+                <h3><li id="list-settings"><a href="library/love.html" class="hidden-link">LOVE</a></li></h3>
+                <h3><li id="list-settings"><a href="library/retro-record-player.html" class="hidden-link">Retro Record Player</a></li></h3>
+                <h3><li id="list-settings"><a href="library/monkey-d-luffy-figure.html" class="hidden-link">Monkey D. Luffy Figure</a></li></h3>
+                <h3><li id="list-settings"><a href="library/buggy-the-clown-figure.html" class="hidden-link">Buggy the Clown Figure</a></li></h3>
+                <h3><li id="list-settings"><a href="library/the-going-merry-pirate-ship.html" class="hidden-link">The Going Merry Pirate Ship</a></li></h3>
+
                 <h3><li id="list-settings"></li></h3>
                 <h3><li id="list-settings"></li></h3>
             </ol>
