--- a/themes.html
+++ b/themes.html
@@ -8,32 +8,25 @@
 
     <body>
         <div class="fixed-box">
-            <div class="upper-fixed-box">
-                <a href="index.html" class="hidden-link2">Home</a>
-            </div>
-            <div class="upper-fixed-box">
-                <a href="library.html" class="hidden-link2">Library</a>
-            </div>
-            <div class="upper-fixed-box">
-                <a href="wishlist.html" class="hidden-link2">Wishlist</a>
-            </div>
-            <div class="upper-fixed-box">
-                <a href="explore.html" class="hidden-link2">Explore</a>
-            </div>
-            <div class="upper-fixed-box">
-                <a href="themes.html" class="hidden-link2">Themes</a>
-            </div>
-            <div class="upper-fixed-box">
-                <a href="links.html" class="hidden-link2">Links</a>
-            </div>
+
+            <a href="index.html"><div class="upper-fixed-box">Home</div></a>
+
+            <a href="library.html"><div class="upper-fixed-box">Library</div></a>
+
+            <a href="wishlist.html"><div class="upper-fixed-box">Wishlist</div></a>
+
+            <a href="themes.html"><div class="upper-fixed-box">Themes</div></a>
+
+            <a href="links.html"><div class="upper-fixed-box">Links</div></a>
+
         </div>
 
         <div class="main-box">
             <div class="grid-container">
                 <div class="theme-box">All Sets</div>
                 <div class="theme-box">Animal Crossing</div>
-                <a href="architecture.html" class="hidden-box-link"><div class="theme-box"><img src="images/colosseum.jpg"></div></a>
-                <div class="theme-box">Art</div>
+                <a href="themes/architecture.html" class="hidden-box-link"><div class="theme-box"><img src="images/colosseum.jpg"></div></a>
+                <a href="themes/art.html" class="hidden-box-link"><div class="theme-box"><img src="images/andy-warhol's-marilyn-monroe.jpg"></div></a>
                 <div class="theme-box">Bluey</div>
                 <div class="theme-box">Botanicals</div>
                 <div class="theme-box">BrickHeadz</div>
