--- a/library.html
+++ b/library.html
@@ -21,10 +21,9 @@
             
         </div>
 
-        <div class="main-box">
-            <div class="images-box">
-                <img src="images/titanic.jpg">
-            </div>
+        <div class="main-box2">
+
+            <h1>&nbsp;&nbsp;Library</h1>
 
             <ol>
                 <h3><li id="list-settings"><a href="library/titanic.html" class="hidden-link">Titanic</a></li></h3>
