--- a/wishlist.html
+++ b/wishlist.html
@@ -21,10 +21,9 @@
 
         </div>
 
-        <div class="main-box">
-            <div class="images-box">
-                <img src="images/titanic.jpg">
-            </div>
+        <div class="main-box2">
+
+            <h1>&nbsp;&nbsp;Wishlist</h1>
 
             <ol>
                 <h3><li id="list-settings">Notre-Dame de Paris</li></h3>
