--- a/themes.html
+++ b/themes.html
@@ -24,11 +24,11 @@
         <div class="main-box">
             <div class="grid-container">
                 <div class="theme-box">All Sets</div>
-                <div class="theme-box">Animal Crossing</div>
+                <a href="themes/animal-crossing.html" class="hidden-box-link"><div class="theme-box"><img src="images/.jpg"></div></a>
                 <a href="themes/architecture.html" class="hidden-box-link"><div class="theme-box"><img src="images/colosseum.jpg"></div></a>
                 <a href="themes/art.html" class="hidden-box-link"><div class="theme-box"><img src="images/andy-warhol's-marilyn-monroe.jpg"></div></a>
-                <div class="theme-box">Bluey</div>
-                <div class="theme-box">Botanicals</div>
+                <a href="themes/bluey.html" class="hidden-box-link"><div class="theme-box"><img src="images/.jpg"></div></a>
+                <a href="themes/botanicals.html" class="hidden-box-link"><div class="theme-box"><img src="images/.jpg"></div></a>
                 <div class="theme-box">BrickHeadz</div>
                 <div class="theme-box">Bricklink Designer Program</div>
                 <div class="theme-box">Chinese New Year</div>
