--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             <a href="links.html"><div class="upper-fixed-box">Links</div></a>
 
         </div>
+        <div class="main-box">
+            <div class="home-container">
+                <div class="home-box">Fun Facts</div>
+                <div class="home-box">My Top 3s</div>
+                <div class="home-box">New Releases and Upcoming Retirements</div>
+            </div>
+        </div>
     </body>
 
 </html>
