--- a/themes.html
+++ b/themes.html
@@ -24,14 +24,14 @@
         <div class="main-box">
             <div class="grid-container">
                 <div class="theme-box">All Sets</div>
-                <a href="themes/animal-crossing.html" class="hidden-box-link"><div class="theme-box"><img src="images/.jpg"></div></a>
-                <a href="themes/architecture.html" class="hidden-box-link"><div class="theme-box"><img src="images/colosseum.jpg"></div></a>
-                <a href="themes/art.html" class="hidden-box-link"><div class="theme-box"><img src="images/andy-warhol's-marilyn-monroe.jpg"></div></a>
-                <a href="themes/bluey.html" class="hidden-box-link"><div class="theme-box"><img src="images/.jpg"></div></a>
-                <a href="themes/botanicals.html" class="hidden-box-link"><div class="theme-box"><img src="images/.jpg"></div></a>
-                <div class="theme-box">BrickHeadz</div>
+                <a href="themes/animal-crossing.html" class="hidden-box-link"><div class="theme-box"><img src="images/animal-crossing.jpg"></div></a>
+                <a href="themes/architecture.html" class="hidden-box-link"><div class="theme-box"><img src="images/architecture.jpg"></div></a>
+                <a href="themes/art.html" class="hidden-box-link"><div class="theme-box"><img src="images/art.jpg"></div></a>
+                <a href="themes/bluey.html" class="hidden-box-link"><div class="theme-box"><img src="images/bluey.jpg"></div></a>
+                <a href="themes/botanicals.html" class="hidden-box-link"><div class="theme-box"><img src="images/botanicals.jpg"></div></a>
+                <a href="themes/brickheadz.html" class="hidden-box-link"><div class="theme-box"><img src="images/brickheadz.jpg"></div></a>
                 <div class="theme-box">Bricklink Designer Program</div>
-                <div class="theme-box">Chinese New Year</div>
+                <a href="themes/chinese-new-year.html" class="hidden-box-link"><div class="theme-box"><img src="images/chinese-new-year.png"></div></a>
                 <div class="theme-box">City</div>
                 <div class="theme-box">Classic</div>
                 <div class="theme-box">Creator 3in1</div>
