update for mobile and etc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <head> 
         <title>Project-1</title>
@@ -8,6 +9,8 @@
     
     <body>
         <div class="fixed-box">
+            
+            <a href="javascript:history.back()" class="back-button"><</a>
 
             <a href="index.html"><div class="upper-fixed-box">Home</div></a>
 
