--- a/links.html
+++ b/links.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <head> 
         <title>Project-1</title>
@@ -21,6 +22,8 @@
             <a href="links.html"><div class="upper-fixed-box">Links</div></a>
 
         </div>
-        
+
+
+
     </body>
 </html>
