--- a/themes/architecture.html
+++ b/themes/architecture.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <head>
         <link rel="stylesheet" href="../styles.css">
@@ -106,7 +107,7 @@
             </main>
 
             <footer class="footer">
-                <a style="float: left;" href="../themes.html" class="hidden-link"><<<</a>
+                <a style="float: left;" href="../themes/architecture.html" class="hidden-link"><<<</a>
                 <a style="float: right;" href="../themes/art.html" class="hidden-link">>>></a>
             </footer>
             
