--- a/themes/art.html
+++ b/themes/art.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <head>
         <link rel="stylesheet" href="../styles.css">
@@ -76,7 +77,7 @@
 
             <footer class="footer">
                 <a style="float: left;" href="../themes/architecture.html" class="hidden-link"><<<</a>
-                <a style="float: right;" href="../themes.html" class="hidden-link">>>></a>
+                <a style="float: right;" href="../bluey.html" class="hidden-link">>>></a>
             </footer>
             
         </div>
