--- a/library.html
+++ b/library.html
@@ -23,6 +23,24 @@
         </div>
 
         <div class="main-box">
+
+            <div class="grid-container5">
+                <div class="circle2"><div class="inner-circle2">R</div></div>
+                <div class="circle"><div class="inner-circle">E</div></div>
+                <div class="circle2"><div class="inner-circle2">V</div></div>
+                <div class="circle2"><div class="inner-circle2">I</div></div>
+                <div class="circle"><div class="inner-circle">E</div></div>
+                <div class="circle2"><div class="inner-circle2">W</div></div>
+                <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle"><div class="inner-circle">L</div></div>
+                <div class="circle2"><div class="inner-circle2">I</div></div>
+                <div class="circle"><div class="inner-circle">B</div></div>
+                <div class="circle2"><div class="inner-circle2">R</div></div>
+                <div class="circle"><div class="inner-circle">A</div></div>
+                <div class="circle2"><div class="inner-circle2">R</div></div>
+                <div class="circle"><div class="inner-circle">Y</div></div>
+            </div>
+
             <div class="grid-container3">
     
             <a href="library/titanic.html"><div class="outer-box">          
