--- a/themes/bluey.html
+++ b/themes/bluey.html
@@ -20,7 +20,7 @@
             
         </div>
 
-    <div class="second-box">
+    <div class="main-box">
         <div class="holy-grail-grid">
 
             <header class="header">Bluey</header>
