--- a/themes.html
+++ b/themes.html
@@ -31,7 +31,7 @@
                 <a href="themes/bluey.html" class="hidden-box-link"><div class="theme-box"><img src="images/bluey.jpg"></div></a>
                 <a href="themes/botanicals.html" class="hidden-box-link"><div class="theme-box"><img src="images/botanicals.jpg"></div></a>
                 <a href="themes/brickheadz.html" class="hidden-box-link"><div class="theme-box"><img src="images/brickheadz.jpg"></div></a>
-                <div class="theme-box">Bricklink Designer Program</div>
+                <a href="themes/bricklink-designer-program.html" class="hidden-box-link"><div class="theme-box">Bricklink Designer Program</div></a>
                 <a href="themes/chinese-new-year.html" class="hidden-box-link"><div class="theme-box"><img src="images/chinese-new-year.png"></div></a>
                 <div class="theme-box">City</div>
                 <div class="theme-box">Classic</div>
