--- a/themes.html
+++ b/themes.html
@@ -24,50 +24,50 @@
 
         <div class="main-box">
             <div class="grid-container">
-                <div class="theme-box">All Sets</div>
+                <a href="themes/all-sets.html" class="hidden-box-link"><div class="theme-box"><img src="images/all-sets.png"></div></a>
                 <a href="themes/animal-crossing.html" class="hidden-box-link"><div class="theme-box"><img src="images/animal-crossing.jpg"></div></a>
                 <a href="themes/architecture.html" class="hidden-box-link"><div class="theme-box"><img src="images/architecture.jpg"></div></a>
                 <a href="themes/art.html" class="hidden-box-link"><div class="theme-box"><img src="images/art.jpg"></div></a>
                 <a href="themes/bluey.html" class="hidden-box-link"><div class="theme-box"><img src="images/bluey.jpg"></div></a>
                 <a href="themes/botanicals.html" class="hidden-box-link"><div class="theme-box"><img src="images/botanicals.jpg"></div></a>
                 <a href="themes/brickheadz.html" class="hidden-box-link"><div class="theme-box"><img src="images/brickheadz.jpg"></div></a>
-                <a href="themes/bricklink-designer-program.html" class="hidden-box-link"><div class="theme-box">Bricklink Designer Program</div></a>
+                <a href="themes/bricklink-designer-program.html" class="hidden-box-link"><div class="theme-box"><img src="images/bricklink-designer-program.png"></div></a>
                 <a href="themes/chinese-new-year.html" class="hidden-box-link"><div class="theme-box"><img src="images/chinese-new-year.png"></div></a>
-                <div class="theme-box">City</div>
-                <div class="theme-box">Classic</div>
-                <div class="theme-box">Creator 3in1</div>
-                <div class="theme-box">DC</div>
-                <div class="theme-box">Disney</div>
-                <div class="theme-box">Dreamzzz</div>
-                <div class="theme-box">Duplo</div>
-                <div class="theme-box">Editions</div>
-                <div class="theme-box">Education</div>
-                <div class="theme-box">Fortnite</div>
-                <div class="theme-box">Friends</div>
-                <div class="theme-box">Gabby's Dollhouse</div>
-                <div class="theme-box">Harry Potter</div>
-                <div class="theme-box">Horizon Adventures</div>
-                <div class="theme-box">Icons</div>
-                <div class="theme-box">Ideas</div>
-                <div class="theme-box">Jurassic World</div>
-                <div class="theme-box">Marvel</div>
-                <div class="theme-box">Minecraft</div>
-                <div class="theme-box">Minifigures</div>
-                <div class="theme-box">Monkie Kid</div>
-                <div class="theme-box">Nike</div>
-                <div class="theme-box">Ninjago</div>
-                <div class="theme-box">One Piece</div>
-                <div class="theme-box">Lego</div>
-                <div class="theme-box">Pokemon</div>
-                <div class="theme-box">Powered Up</div>
-                <div class="theme-box">Sonic the Hedgehog</div>
-                <div class="theme-box">Speed Champions</div>
-                <div class="theme-box">Star Wars</div>
-                <div class="theme-box">Super Mario</div>
-                <div class="theme-box">Technic</div>
-                <div class="theme-box">Zelda</div>
-                <div class="theme-box">Wednesday</div>
-                <div class="theme-box">Wicked</div>
+                <a href="themes/city.html" class="hidden-box-link"><div class="theme-box"><img src="images/city.png"></div></a>
+                <a href="themes/classic.html" class="hidden-box-link"><div class="theme-box"><img src="images/classic.png"></div></a>
+                <a href="themes/creator-3in1.html" class="hidden-box-link"><div class="theme-box"><img src="images/creator-3in1.png"></div></a>
+                <a href="themes/dc.html" class="hidden-box-link"><div class="theme-box"><img src="images/dc.png"></div></a>
+                <a href="themes/disney.html" class="hidden-box-link"><div class="theme-box"><img src="images/disney.png"></div></a>
+                <a href="themes/dreamzzz.html" class="hidden-box-link"><div class="theme-box"><img src="images/dreamzzz.png"></div></a>
+                <a href="themes/duplo.html" class="hidden-box-link"><div class="theme-box"><img src="images/duplo.png"></div></a>
+                <a href="themes/editions.html" class="hidden-box-link"><div class="theme-box"><img src="images/editions.png"></div></a>
+                <a href="themes/education.html" class="hidden-box-link"><div class="theme-box"><img src="images/education.png"></div></a>
+                <a href="themes/fortnite.html" class="hidden-box-link"><div class="theme-box"><img src="images/fortnite.png"></div></a>
+                <a href="themes/friends.html" class="hidden-box-link"><div class="theme-box"><img src="images/friends.png"></div></a>
+                <a href="themes/gabby's-dollhouse.html" class="hidden-box-link"><div class="theme-box"><img src="images/gabby's-dollhouse.png"></div></a>
+                <a href="themes/harry-potter.html" class="hidden-box-link"><div class="theme-box"><img src="images/harry-potter.png"></div></a>
+                <a href="themes/horizon-adventures.html" class="hidden-box-link"><div class="theme-box"><img src="images/horizon-adventures.png"></div></a>
+                <a href="themes/icons.html" class="hidden-box-link"><div class="theme-box"><img src="images/icons.png"></div></a>
+                <a href="themes/ideas.html" class="hidden-box-link"><div class="theme-box"><img src="images/ideas.png"></div></a>
+                <a href="themes/jurassic-world.html" class="hidden-box-link"><div class="theme-box"><img src="images/jurassic-world.png"></div></a>
+                <a href="themes/marvel.html" class="hidden-box-link"><div class="theme-box"><img src="images/marvel.png"></div></a>
+                <a href="themes/minecraft.html" class="hidden-box-link"><div class="theme-box"><img src="images/minecraft.png"></div></a>
+                <a href="themes/minifigures.html" class="hidden-box-link"><div class="theme-box"><img src="images/minifigures.png"></div></a>
+                <a href="themes/monkie-kid.html" class="hidden-box-link"><div class="theme-box"><img src="images/monkie-kid.png"></div></a>
+                <a href="themes/nike.html" class="hidden-box-link"><div class="theme-box"><img src="images/nike.png"></div></a>
+                <a href="themes/ninjago.html" class="hidden-box-link"><div class="theme-box"><img src="images/ninjago.png"></div></a>
+                <a href="themes/one-piece.html" class="hidden-box-link"><div class="theme-box"><img src="images/one-piece.png"></div></a>
+                <a href="themes/lego.html" class="hidden-box-link"><div class="theme-box"><img src="images/lego.png"></div></a>
+                <a href="themes/pokemon.html" class="hidden-box-link"><div class="theme-box"><img src="images/pokemon.png"></div></a>
+                <a href="themes/powered-up.html" class="hidden-box-link"><div class="theme-box"><img src="images/powered-up.png"></div></a>
+                <a href="themes/sonic-the-hedgehog.html" class="hidden-box-link"><div class="theme-box"><img src="images/sonic-the-hedgehog.png"></div></a>
+                <a href="themes/speed-champions.html" class="hidden-box-link"><div class="theme-box"><img src="images/speed-champions.png"></div></a>
+                <a href="themes/star-wars.html" class="hidden-box-link"><div class="theme-box"><img src="images/star-wars.png"></div></a>
+                <a href="themes/super-mario.html" class="hidden-box-link"><div class="theme-box"><img src="images/super-mario.png"></div></a>
+                <a href="themes/technic.html" class="hidden-box-link"><div class="theme-box"><img src="images/technic.png"></div></a>
+                <a href="themes/zelda.html" class="hidden-box-link"><div class="theme-box"><img src="images/zelda.png"></div></a>
+                <a href="themes/wednesday.html" class="hidden-box-link"><div class="theme-box"><img src="images/wednesday.png"></div></a>
+                <a href="themes/wicked.html" class="hidden-box-link"><div class="theme-box"><img src="images/wicked.png"></div></a>
             </div>
         </div>
 
