--- a/wishlist.html
+++ b/wishlist.html
@@ -25,7 +25,7 @@
  <div style="background-color: rgb(255, 251, 204); min-height: 100vh; min-width: 100vw;"></div>
           <div class="main-box">
 
-            <div class="grid-container6">
+            <div class="grid-container6 grid-container6-single">
                 <div class="circle3"><div class="inner-circle3"></div></div>
                 <div class="circle2"><div class="inner-circle2">M</div></div>
                 <div class="circle"><div class="inner-circle">Y</div></div>
@@ -39,6 +39,23 @@
                 <div class="circle2"><div class="inner-circle2">S</div></div>
                 <div class="circle"><div class="inner-circle">T</div></div>
                 <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle3"><div class="inner-circle3"></div></div>
+            </div>
+
+            <div class="grid-container6 grid-container6-two-rows">
+                <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle"><div class="inner-circle">W</div></div>
+                <div class="circle2"><div class="inner-circle2">I</div></div>
+                <div class="circle"><div class="inner-circle">S</div></div>
+                <div class="circle2"><div class="inner-circle2">H</div></div>
+                <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle3"><div class="inner-circle3"></div></div>
+                <div class="circle"><div class="inner-circle">L</div></div>
+                <div class="circle2"><div class="inner-circle2">I</div></div>
+                <div class="circle2"><div class="inner-circle2">S</div></div>
+                <div class="circle"><div class="inner-circle">T</div></div>
                 <div class="circle3"><div class="inner-circle3"></div></div>
             </div>
 
