--- a/themes.html
+++ b/themes.html
@@ -22,7 +22,7 @@
 
         </div>
 
-        <div class="main-box">
+        <div class="main-box themes-landing">
             <div class="grid-container">
                 <a href="themes/all-sets.html" class="hidden-box-link"><div class="theme-box"><img src="images/all-sets.png"></div></a>
                 <a href="themes/animal-crossing.html" class="hidden-box-link"><div class="theme-box"><img src="images/animal-crossing.jpg"></div></a>
