--- a/themes/botanicals.html
+++ b/themes/botanicals.html
@@ -51,13 +51,13 @@
 
                 <p>2024</p>
                     <div class="grid-container2">
-                        <a href="../library/lucky-bamboo.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Lucky Bamboo</span><img src="../images/lucky-bamboo.jpg"></div></a>
-                        <a href="../library/mini-orchid.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Mini Orchid</span><img src="../images/mini-orchid.jpg"></div></a>
+                        <a href="../library/lucky-bamboo.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Lucky Bamboo</span><img src="../images/lucky-bamboo.png"></div></a>
+                        <a href="../library/mini-orchid.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Mini Orchid</span><img src="../images/mini-orchid.png"></div></a>
                         <a href="../library/pretty-pink-flower-bouquet.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Pretty Pink Flower Bouquet</span><img src="../images/pretty-pink-flower-bouquet.jpg"></div></a>
-                        <a href="../library/poinsettia.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Poinsettia</span><img src="../images/poinsettia.jpg"></div></a>
-                        <a href="../library/wreath.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Wreath</span><img src="../images/wreath.jpg"></div></a>
-                        <a href="../library/plum-blossom.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Plum Blossom</span><img src="../images/plum-blossom.jpg"></div></a>
-                        <a href="../library/chrysanthemum.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Chrysanthemum</span><img src="../images/chrysanthemum.jpg"></div></a>
+                        <a href="../library/poinsettia.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Poinsettia</span><img src="../images/poinsettia.png"></div></a>
+                        <a href="../library/wreath.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Wreath</span><img src="../images/wreath.png"></div></a>
+                        <a href="../library/plum-blossom.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Plum Blossom</span><img src="../images/plum-blossom.png"></div></a>
+                        <a href="../library/chrysanthemum.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Chrysanthemum</span><img src="../images/chrysanthemum.png"></div></a>
                     </div>
 
                 <p>2023</p>
