--- a/themes/creator-3in1.html
+++ b/themes/creator-3in1.html
@@ -23,7 +23,7 @@
     <div class="main-box">
         <div class="holy-grail-grid themes-page">
 
-            <header class="header">Creator 3in1</header>
+            <header class="header">Creator 3-in-1</header>
 
             <main class="main-content">
                 <p>2024</p>
