--- a/themes/art.html
+++ b/themes/art.html
@@ -71,7 +71,7 @@
                         <div class="theme-box2">Star Wars The Sith</div>
                         <div class="theme-box2">Marvel Studios Iron Man</div>
                         <div class="theme-box2">The Beatles</div>
-                        <a href="../library/andy-warhol's-marilyn-monroe.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Andy Warhol'S Marilyn Monroe</span><img src="../images/andy-warhol's-marilyn-monroe.jpg"></div></a>
+                        <a href="../library/andy-warhol's-marilyn-monroe.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Andy Warhol's Marilyn Monroe</span><img src="../images/andy-warhol's-marilyn-monroe.jpg"></div></a>
                     </div>
             </main>
 
